--- a/src/app/components/delete-review/delete-review.component.html
+++ b/src/app/components/delete-review/delete-review.component.html
@@ -1,1 +1,18 @@
-<p>delete-review works!</p>
+<div class="row mb-10">
+    <div class="col-11 offset-1">
+        <h1>Are You Sure You Want To Delete Review Number {{review.id}} ?</h1>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="btn-group btn-group-lg gap-4 d-flex justify-content-center col-4 mx-auto" role="group" aria-label="...">
+   
+        <button type="button" #btnYes class="btn btn-secondary mb-3" (click)="onYes()">Yes</button>
+
+        <button type="button" #btnNo class="btn btn-danger mb-3" (click)="onNo()">No</button>
+
+</div>
